# Rust_softRenderer

./: Cargo.toml  README.md
Res/: mitsuba.bvh  mitsuba.nanitemesh
Res/Model/: Sphere.lhsm  cube.lhsm  niutou.lhsm
src/: boundingbox.rs  float4.rs  main.rs  matrix3.rs  matrix4.rs  scene.rs  staticmesh.rs  texture.rs
